# ifcb-focus

./: .gitignore  Dockerfile  README.md  analyze_pseudo_labels.py  augmentation.py  bootstrapping.py  download_validation_set.py  evaluate_random_forest.py  feature_extraction.py  focus_feature_extraction.py  pyproject.toml  requirements.txt  score.py  score_bins.py  score_student_models.py  score_teacher_models.py  train.py  train_distilled_student.py  train_student_model.py  train_teacher_model.py  training_workflows.py  workflows.py
scripts/: extract_features.py  score_bin.py  train_student.py  train_teacher.py
src/ifcb_focus/: __init__.py
src/ifcb_focus/features/: __init__.py  constants.py  extraction.py  preprocessing.py
src/ifcb_focus/scoring/: __init__.py  core.py  teacher.py
src/ifcb_focus/training/: __init__.py  base.py  student.py  teacher.py  utils.py
src/ifcb_focus/utils/: __init__.py  analysis.py  augmentation.py  data.py
src/ifcb_focus/workflows/: __init__.py  core.py
